[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envflux"
version = "0.1.0"
description = "Envoy data collector for InfluxDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Matthew Gyurgyik", email = "matthew@gyurgyik.com" }
]
dependencies = [
  "pyenphase",
  "influxdb-client",
  "PyYAML",
  "platformdirs"
]

[project.scripts]
envflux = "envflux.__main__:main_entry"
